<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/container"
    tools:context=".ui.activities.AnxietyResultActivity">

    <View
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_anxiety_result_top" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/the_result"
        android:textColor="@color/white"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/you_have"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />




    <Button
        android:id="@+id/done"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_blue"
        android:text="@string/done"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/login"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_red"
        android:text="@string/login_to_save_your_data"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/done"
        app:layout_constraintVertical_bias="0.204"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="if you feel that anxiety is affecting your daily life, call your doctor."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/_10ssp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        app:cardCornerRadius="@dimen/_90sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/loading_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/calculatingResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/calculating_results"
                    android:textColor="@color/darkGray" />
            </LinearLayout>

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/red"
                android:layout_margin="@dimen/_5sdp"
                android:textAlignment="center"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                tools:text="Mild Anxiety" />

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/result_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cpb_background_progressbar_color="#00B6BBD8"
                app:cpb_background_progressbar_width="5dp"
                app:cpb_progress="0"
                app:cpb_progress_direction="to_right"
                app:cpb_progress_max="21"
                app:cpb_progressbar_color="@color/blue"
                app:cpb_progressbar_width="@dimen/_5sdp"
                app:cpb_round_border="true" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>