<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.activities.LoginActivity"
    android:id="@+id/container">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_150sdp"
        android:background="@drawable/login_layout_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_via"
            android:textColor="@color/black"
            android:textSize="@dimen/_35sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/or"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_35sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_with_facebook" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_with_google"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_110sdp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:cardBackgroundColor="@color/lightRed"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_4sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/ic_google"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_18ssp"
                    android:layout_marginTop="@dimen/_7sdp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/login_with_facebook"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_110sdp"
            android:layout_marginTop="32dp"
            app:cardElevation="@dimen/_4sdp"
            app:cardBackgroundColor="@color/lightBlue"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@id/login_with_google"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/ic_facebook" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/facebook"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_18ssp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/login_as_guest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginHorizontal="@dimen/_50sdp"
            app:cardBackgroundColor="@color/lightGray"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_4sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="As Guest"
                android:gravity="center"
                android:textSize="@dimen/_20ssp"/>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="266dp"
        android:layout_height="123dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>