<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.ExercisesActivity">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_decoration_exercises" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_decoration_exercises" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/tools_n_amp_exercises"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp">
            <LinearLayout
                android:id="@+id/de_catastrophizing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_20sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/ic_asteroid"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/de_catastrophizing"
                    android:textSize="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <View
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/_10sdp"/>

            <LinearLayout
                android:id="@+id/breathing_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_20sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/ic_lungs"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/breathing_exercise"
                    android:textSize="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <View
                android:id="@+id/breathing_line"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/_10sdp"/>

            <LinearLayout
                android:id="@+id/exposure_therapy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_20sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/ic_mental_health"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/exposure_therapy"
                    android:textSize="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <View
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/_10sdp"/>

            <LinearLayout
                android:id="@+id/challenging_negative_thoughts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_20sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/ic_negative"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/challenging_negative_thoughts"
                    android:textSize="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <View
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/_10sdp"/>

            <LinearLayout
                android:id="@+id/coping_technique"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/_20sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/ic_creative"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/_5_4_3_2_1_coping_technique"
                    android:textSize="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>